qmake/vcxproj generator: Handle C standard compiler flags

Handle the compiler flags /std:c11 and /std:c17 and turn them into the
values stdc11 and stc17 for the LanguageStandard_C tag.

Drive-by change: Add /std:c++20 to the list of known C++ standard
options.

Task-number: QTBUG-89296
Change-Id: Ia575fff611bdf795406db84bd34057d008c8a383
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit 5e98769602c1e7aa6ceeb45ffeee1680c58f4cda)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>